--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "devDependencies": {
     "prettier": "^2.8.4",
     "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint-config-prettier": "^1.18.0",
+    "typedoc": "^0.24.2"
   },
   "dependencies": {
     "discord-api-types": "^0.37.38",
