--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "typedoc": "^0.24.2"
   },
   "dependencies": {
+    "better-sqlite3": "^8.3.0",
     "discord-api-types": "^0.37.38",
-    "discord.js": "^14.8.0"
+    "discord.js": "^14.8.0",
+    "enmap": "^5.9.5"
   },
   "repository": {
     "type": "git",
