--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,23 @@
 {
   "compilerOptions": {
+    "allowJs": false,
     "target": "es2022",
     "module": "commonjs",
     "outDir": "./lib",
     "declaration": true,
     "declarationDir": "./lib/types",
-    "strict": true,
-    "esModuleInterop": true,
     "skipLibCheck": true,
-    "typeRoots": ["./node_modules/@types", "./lib/types"]
   },
-  "exclude": [
-    "node_modules",
-    "lib"
-  ],
   "include": [
-    "src/*.ts",
-    "src/**/*.ts",
-    "src/**/**/*.ts"
+    "./src/*.ts",
+    "./src/**/*.ts",
+    "./src/**/**/*.ts"
+  ],
+  "exclude": [
+    "./node_modules",
+    "./lib/*",
+    "./lib/**/*",
+    "./lib/**/**/*",
+    "./lib/**/**/**/*"
   ],
 }
