--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "README.md"
   ],
   "author": "Elouann Hosta",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "prettier": "^2.8.4",
     "tslint": "^6.1.3",
@@ -34,13 +34,11 @@
     "typedoc": "^0.24.2"
   },
   "dependencies": {
-    "better-sqlite3": "^8.3.0",
     "discord-api-types": "^0.37.38",
-    "discord.js": "^14.8.0",
-    "enmap": "^5.9.5"
+    "discord.js": "^14.8.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/elouann-h/kyatsu.git"
+    "url": "https://github.com/KyatsuJS/kyatsujs.git"
   }
 }
