--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "publish-patch": "npm version patch && git push && npm publish && git push --tags",
     "publish-minor": "npm version minor && git push && npm publish && git push --tags",
     "publish-major": "npm version major && git push && npm publish && git push --tags",
-    "test": "npm run build && node index.test.js"
+    "test": "npm run build && node index.test.js",
+    "tdoc": "typedoc --plugin typedoc-plugin-markdown --out docs src/index.ts --hideBreadcrumbs true && node doc-builder.js"
   },
   "keywords": [
     "discord",
@@ -31,7 +32,8 @@
     "prettier": "^2.8.4",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
-    "typedoc": "^0.24.2"
+    "typedoc": "^0.24.4",
+    "typedoc-plugin-markdown": "^3.15.1"
   },
   "dependencies": {
     "discord-api-types": "^0.37.38",
