--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "publish-minor": "npm version minor && git push && npm publish && git push --tags",
     "publish-major": "npm version major && git push && npm publish && git push --tags",
     "test": "npm run build && node index.test.js",
-    "tdoc": "typedoc --plugin typedoc-plugin-markdown --out docs src/index.ts --hideBreadcrumbs true && node doc-builder.js"
+    "tmd": "typedoc --plugin typedoc-plugin-markdown --hideBreadcrumbs true --out docs src/index.ts && node doc-builder.js",
+    "tdoc": "typedoc --out docs src/index.ts"
   },
   "keywords": [
     "discord",
@@ -33,7 +34,8 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typedoc": "^0.24.4",
-    "typedoc-plugin-markdown": "^3.15.1"
+    "typedoc-plugin-markdown": "^3.15.1",
+    "typedoc-plugin-pages": "^1.1.0"
   },
   "dependencies": {
     "discord-api-types": "^0.37.38",
